--- a/custom_components/electrolux_status/translations/el.json
+++ b/custom_components/electrolux_status/translations/el.json
@@ -32,7 +32,7 @@
                     "notifications": "Ειδοποιήσεις",
                     "notifications_diagnostic": "Διαγνωστικά",
                     "notifications_warning": "Προειδοποιήσεις",
-                    "password": "Κωδικος",
+                    "password": "Κωδικός",
                     "renew_interval": "Διάστημα ανανέωσης του websocket (δευτερόλεπτα)"
                 }
             }
